[project]
name = "glysto-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Cephaz",email = "pierrezhoou@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = false

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
gitlint = "^0.19.1"
commitizen = "^4.13.8"
