[project]
name = "glysto-api"
version = "0.5.0"
description = ""
authors = [
    {name = "Cephaz",email = "pierrezhoou@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = false
version_files = ["README.md"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
gitlint = "^0.19.1"
commitizen = "^4.13.8"
pre-commit = "^4.5.1"
